--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="源.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="pp.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
